# stackspoint-mono

./: .dockerignore  .gitignore  Anchor.toml  CODEBASE_INDEX.md  DATABASE_SETUP.md  DEVELOPMENT.md  DOCKER.md  DOCKER_SETUP_COMPLETE.md  LICENSE  MIGRATIONS_GUIDE.md  MIGRATIONS_QUICKSTART.md  Makefile  NAVIGATION_COMPLETE.md  QUICKSTART.md  README.md  READY_TO_TEST.md  START_DOCKER.md  START_HERE.md  TEST_DB_SUMMARY.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.changeset/: config.json
apps/backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  package.json  test-db-connection.js
apps/backend/src/: app.module.ts  main.ts
apps/backend/src/common/enums/: ad-format.enum.ts  campaign-status.enum.ts  index.ts  interaction-type.enum.ts  site-type.enum.ts  user-role.enum.ts
apps/backend/src/config/: typeorm.config.ts
apps/backend/src/entities/: campaign.entity.ts  index.ts  interaction.entity.ts  placement.entity.ts  site.entity.ts  user.entity.ts
apps/backend/src/modules/auth/: auth.module.ts
apps/contracts/: .gitignore
apps/frontend/: Dockerfile  package.json  pnpm-lock.yaml
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/components/: CTA.tsx  Features.tsx  Footer.tsx  ForWho.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  Problem.tsx  Solution.tsx
apps/frontend/src/lib/: mock-data.ts  publisher-mock-data.ts
programs/adryx/: Cargo.toml
programs/adryx/src/: lib.rs
scripts/: README.md  docker-start.sh  setup-env.sh  test-and-rebuild.sh  test-db.sh
(+31 files in other folders)
