[package]
name = "adryx"
version = "0.1.0"
description = "Adryx on-chain ad tracking and reward program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "adryx"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
